// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchUserCredits action creator should create the correct actions for when the get user credits procedure is successful with empty data: get user credits success payload with empty data 1`] = `
Object {
  "payload": Object {
    "credits": Array [
      Object {
        "currency": null,
        "formattedValue": null,
        "value": 0,
      },
    ],
  },
  "type": "@farfetch/blackout-redux/FETCH_USER_CREDITS_SUCCESS",
}
`;

exports[`fetchUserCredits action creator should create the correct actions for when the get user credits procedure is successful: get credit success payload 1`] = `
Object {
  "payload": Object {
    "credits": Array [
      Object {
        "currency": "GB",
        "formattedValue": "£50",
        "value": 50,
      },
    ],
  },
  "type": "@farfetch/blackout-redux/FETCH_USER_CREDITS_SUCCESS",
}
`;
